--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -59,18 +59,35 @@
     </div>
 
     <div class="row mt-3 ">
-        <div class="col-lg-2"  sec:authorize="isAuthenticated()">
-            <ul>
-                <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/profilePage'}">Student Profile</a></li>
-                <li style="list-style-type:none"><a style="text-decoration: none" href="#">Grades List</a></li>
-                <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/courses'}">Course registration</a></li>
-                <li style="list-style-type:none"><a style="text-decoration: none" href="#">Transcript</a></li>
-                <li style="list-style-type:none"><a style="text-decoration: none" href="#">Sign out</a></li>
-            </ul>
+        <div class="col-2" sec:authorize="isAuthenticated()">
+            <div  sec:authorize="hasAnyRole('ROLE_STUDENT')">
+                <ul>
+                    <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/profilePage'}">Student Profile</a></li>
+                    <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/courses'}">Course registration</a></li>
+                    <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/grade'}">Grades List</a></li>
+                    <li style="list-style-type:none"><a style="text-decoration: none" href="#">Attendance</a></li>
+
+                    <li style="list-style-type:none"><a style="text-decoration: none" href="#">Transcript</a></li>
+                    <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/toExit'}">Sign out</a></li>
+                </ul>
+            </div>
+            <div  sec:authorize="hasAnyRole('ROLE_TEACHER')">
+                <ul>
+                    <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/profilePage'}">Profile</a></li>
+                    <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/courses'}">My Courses</a></li>
+                    <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/grade'}">Grading</a></li>
+                    <li style="list-style-type:none"><a style="text-decoration: none" href="#">Attendance</a></li>
+
+                    <li style="list-style-type:none"><a style="text-decoration: none" href="#">birbale</a></li>
+                    <li style="list-style-type:none"><a style="text-decoration: none" th:href="@{'/toExit'}">Logout</a></li>
+                </ul>
+            </div>
         </div>
         <div class="col-10" layout:fragment="content">
         </div>
     </div>
+
+
 </div>
 
 
