--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -2,39 +2,42 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      layout:decorate="layouts/layout.html">
+      layout:decorate="layouts/layout.html" xmlns="http://www.w3.org/1999/html">
 <div layout:fragment="content">
 <div>
-    <h1 class="text-center">SIGN IN</h1>
+    <h1 class="text-center">Student portal</h1>
 </div>
 
 
-<form th:action="@{'/toEnter'}" method="post">
-    <div class="row">
-        <div class="col-12">
-            <label>Email:</label>
+<div class="row mx-auto">
+    <form th:action="@{'/toEnter'}" method="post">
+        <div class="row ">
+            <div class="col-10">
+                <label>Email:</label>
+            </div>
         </div>
-    </div>
-    <div class="row mt-2">
-        <div class="col-12">
-            <input type="email" name="user_email" class="form-control" placeholder="Insert email" required>
+        <div class="row mt-2 ">
+            <div class="col-10">
+                <input type="email" name="user_email" class="form-control" placeholder="Insert email" required>
+            </div>
         </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col-12">
-            <label>Password:</label>
+        <div class="row mt-3 ">
+            <div class="col-10">
+                <label>Password:</label>
+            </div>
         </div>
-    </div>
-    <div class="row mt-2">
-        <div class="col-12">
-            <input type="password" name="user_password" class="form-control" placeholder="Insert password" required>
+        <div class="row mt-2 text-center">
+            <div class="col-10 ">
+                <input type="password" name="user_password" class="form-control" placeholder="Insert password" required>
+            </div>
         </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col-12">
-            <button class="btn btn-success">SIGN IN</button>
+        <div class="row mt-3 text-center">
+            <div class="col-12">
+                <button class="btn btn-success">SIGN IN</button>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+
+</div>
 </div>
 </html>
