--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
 <body>
 <div class="row " th:fragment="footer">
     <div style="position: fixed; left: 0;bottom: 0;width: 100%;" class=" col-lg-12 mt-3 bg-dark py-3">
-        <p class="text-center text-light" th:text="'2022 Cool University. All right reserved.'"></p>
+        <p class="text-center text-light" th:text="'2022 Cool University. All rights reserved.'"></p>
     </div>
 </div>
 </body>
