--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -9,7 +9,7 @@
 </div>
 
 
-<div class="row mx-auto">
+<div class="row mx-auto" style="margin: 1rem auto !important;">
     <form th:action="@{'/toEnter'}" method="post">
         <div class="row ">
             <div class="col-10">
