--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -16,14 +16,16 @@
                     <th scope="col">Course Code</th>
                     <th scope="col">Course Name</th>
                     <th scope="col">Credits</th>
+                    <th scope="col">Teacher</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="course:${currentUser.courses}">
+                <tr th:each="course:${courses}">
                     <th scope="row" th:text="${course.id}"></th>
                     <td th:text="${course.code}"></td>
                     <td th:text="${course.name}"></td>
                     <td th:text="${course.credits}"></td>
+                    <td th:text="${course.getTeacher().fullName}"></td>
                 </tr>
 
                 </tbody>
@@ -32,7 +34,7 @@
         </div>
     </div>
    <div class="row mt-5">
-       <div class="col-lg-7 mx-auto">
+       <div class="col-lg-10 mx-auto">
 
            <table class="table table-striped table-hover mt-2">
                <thead>
@@ -40,6 +42,7 @@
                    <th scope="col">#</th>
                    <th scope="col">Course Code</th>
                    <th scope="col">Course Name/Credits</th>
+                   <th scope="col" >Teacher</th>
                    <th scope="col" style="width: 7%;">Assign</th>
                </tr>
                </thead>
@@ -48,6 +51,7 @@
                    <th scope="row" th:text="${course.id}"></th>
                    <td th:text="${course.code}"></td>
                    <td th:text="${course.name+'/'+course.credits}"></td>
+                   <td th:text="${course.teacher.fullName}"></td>
                    <td>
                        <form th:action="@{'/assigncourse'}" method="post">
                            <input type="hidden" name="course_id" th:value="${course.id}">
