--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -3,41 +3,41 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="layouts/layout.html" xmlns="http://www.w3.org/1999/html">
-<div layout:fragment="content">
+<div layout:fragment="content"  >
 <div>
-    <h1 class="text-center">Student portal</h1>
+    <h1 class="text-center mt-5 ms-3">Student portal</h1>
 </div>
 
-
-<div class="row mx-auto" style="margin: 1rem auto !important;">
+<div class="d-flex justify-content-lg-center">
     <form th:action="@{'/toEnter'}" method="post">
+        <div th:text="${param=='success'}?'success':'error'"></div>
         <div class="row ">
-            <div class="col-10">
+            <div class="col-lg-12">
                 <label>Email:</label>
             </div>
         </div>
         <div class="row mt-2 ">
-            <div class="col-10">
+            <div class="col-lg-12">
                 <input type="email" name="user_email" class="form-control" placeholder="Insert email" required>
             </div>
         </div>
         <div class="row mt-3 ">
-            <div class="col-10">
+            <div class="col-12">
                 <label>Password:</label>
             </div>
         </div>
         <div class="row mt-2 text-center">
-            <div class="col-10 ">
-                <input type="password" name="user_password" class="form-control" placeholder="Insert password" required>
+            <div class="col-12   ">
+                <input size="100" type="password" name="user_password" class="form-control" placeholder="Insert password" required>
             </div>
         </div>
-        <div class="row mt-3 text-center">
+        <div class="row mt-5 text-center">
             <div class="col-12">
                 <button class="btn btn-success">SIGN IN</button>
             </div>
         </div>
     </form>
+</div>
+</div>
 
-</div>
-</div>
 </html>
